// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> Props should use the given props 1`] = `
<div
  className="lumx-radio-button lumx-radio-button--is-unchecked lumx-radio-button--theme-light"
>
  <div
    className="lumx-radio-button__input-wrapper"
  >
    <input
      checked={false}
      className="lumx-radio-button__input-native"
      id="lumx-radio-button-3"
      name="test"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
      value="test-value"
    />
    <div
      className="lumx-radio-button__input-placeholder"
    >
      <div
        className="lumx-radio-button__input-background"
      />
      <div
        className="lumx-radio-button__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-radio-button__content"
  >
    <RadioButtonLabel>
      Test label
    </RadioButtonLabel>
    <RadioButtonHelper>
      Test Helper
    </RadioButtonHelper>
  </div>
</div>
`;

exports[`<RadioButton> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-radio-button lumx-radio-button--is-unchecked lumx-radio-button--theme-light"
>
  <div
    className="lumx-radio-button__input-wrapper"
  >
    <input
      checked={false}
      className="lumx-radio-button__input-native"
      id="lumx-radio-button-1"
      name="test"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
      value="test-value"
    />
    <div
      className="lumx-radio-button__input-placeholder"
    >
      <div
        className="lumx-radio-button__input-background"
      />
      <div
        className="lumx-radio-button__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-radio-button__content"
  >
    <RadioButtonLabel
      key=".0"
      radioButtonId="lumx-radio-button-1"
    >
      Default Test label
    </RadioButtonLabel>
  </div>
</div>
`;
